--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"dayjs": "^1.11.10",
 		"leaflet": "^1.9.4",
 		"nanoid": "^4.0.2",
+		"resend": "^1.1.0",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-tel-input": "^3.3.6",
 		"sveltekit-i18n": "^2.4.2",
