--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"updatetypes": "npx supabase gen types typescript --project-id blbosiccwkpntqobciwj > src/lib/types/SupabaseDefinition.d.ts"
 	},
 	"devDependencies": {
 		"@ernane/svelte-star-rating": "^1.1.4",
@@ -19,7 +20,7 @@
 		"@sveltejs/kit": "^1.25.0",
 		"@tailwindcss/forms": "0.5.6",
 		"@tailwindcss/typography": "0.5.9",
-		"@types/leaflet": "^1.9.4",
+		"@types/leaflet": "^1.9.6",
 		"@types/node": "20.5.7",
 		"autoprefixer": "10.4.15",
 		"postcss": "8.4.29",
